--- a/Ejercicio-8/Ejercicio-8.tex
+++ b/Ejercicio-8/Ejercicio-8.tex
@@ -156,7 +156,8 @@ Por último, la señal del contador de frecuencia dividida por cien, la cual se 
 
 Se buscó realizar un diseño autónomo que funcione con dos baterías de $9V$. Para esto, se utilizó una etapa de entrada compuesta por el regulador de tensión \href{https://www.sparkfun.com/datasheets/Components/LM7805.pdf}{LM7805}. Esta etapa de entrada proporcionará los $5V$ que alimentarán todos los integrados digitales del diseño.
 
-\subsubsection{Clock Generator}
+\subsubsection{Generador de Clock}
+\label{sec:clkgen}
 
 Para el generador de clock se utilizó el famoso integrado \href{http://www.ti.com/lit/ds/symlink/se555.pdf}{NE555}. Este integrado está compuesto por dos comparadores (cuyo funcionamiento se encuentra detallado más adelante), un SR-Latch, un transistor de descarga y finalmente un driver de salida, como se observa en la Figura (\ref{fig:555}).
 
@@ -274,7 +275,7 @@ f=\frac{1}{t_{off} + t_{on}}
 
 Se colocó un potenciómetro en la resistencia $R_2$ de tal manera que cuando este se encuentre en $0\%$ la frecuencia de la señal de salida sea de $2KHz$ mientras que si el potenciómetro se encuentra en su máxima resistencia la frecuencia de la señal de salida sea de $100Hz$. Cabe notar que cuando la frecuencia del generador de clock decrece, lo que sucede es que solamente aumenta el periodo de tiempo en el que la salida se encuentra en un estado bajo.
 
-\subsubsection{Frequency Divider}
+\subsubsection{Divisor de Frecuencia}
 
 Para el divisor de frecuencia se utilizaron los dos contadores en década del integrado \href{http://www.ti.com/lit/ds/symlink/cd4017b.pdf}{CD4017BE}. Conectando el pin de carry out, el cual se enciende una vez cada diez señales de clock, a la entrada de clock del segundo contador se logra obtener a la salida del segundo contador una señal de clock cuya frecuencia es cien veces menor a la original. Una buena característica de este diseño es que no solo el clock original esta completamente sincronizado con esta nueva señal de clock cien veces más lenta, sino que por la naturaleza del funcionamiento interno de estos contadores, el duty-cycle de este nuevo clock es siempre del $50\%$. Esto prueba ser muy beneficioso a la hora de integrar esta señal para conseguir una rampa.
 
@@ -437,25 +438,23 @@ Luego, se comprobó el funcionamiento de la implementación, con varios resultad
 
 \subsection{Conclusiones}
 
-Se logró un correcto funcionamiento a la hora de sincronizar todas las etapas y efectivamente convertir la señal analógica en una digital. A pesar de ello, no se logró mapear el joystick entre los valores de 0 a 99, sino que fue entre 0 y 33. Este funcionamiento se logró luego de realizar varios ajustes y agregar capacitores para disminuir el ruido.
-
-La razón del mapeo erróneo no ha podido ser descubierta, ya que se intentó tanto aumentando como disminuyendo la amplitud de la rampa, reduciendo con un divisor resistivo la salida del joystick, cortando físicamente la conexión del clock de $100-2000Hz$ del detector de flancos y utilizando el clock dividido solo por diez, entre otras cosas, todas sin resultados positivos. Si bien la placa se continúa debuggeando, se concluye actualmente que se debe a la inmensa cantidad de ruido presente en todas las señales que se observaban en el osciloscopio.
+Se logró un correcto funcionamiento a la hora de sincronizar todas las etapas y efectivamente convertir la señal analógica en una digital. A pesar de ello, no se logró mapear el joystick entre los valores de 0 a 99, sino que fue entre 0 y 35. Este funcionamiento se logró luego de realizar varios ajustes y agregar capacitores para disminuir el ruido.
 
 A modo de ejemplo, la señal de posición del joystick posee un \textit{droop} cuando llega la señal de reset del contador. Cabe destacar que ambas señales no poseen conexión física. Esto ocasiona que la de acquire (o refresh) del display se dispare varias veces en una misma rampa. Es así que se logró solucionar dicho inconveniente utilizando un capacitor de $100\mu F$ entre tierra y la salida del joystick, añadiendo también $1\mu F$ de capacitancia a tierra conectada a la salida del comparador.
 
 Luego, se observó que ambas señales mencionadas, no solo se manifestaban en la tensión del joystick, sino en toda la alimentación de $5V$ del circuito, provista por el regulador de tensión, por lo que colocando, antes y después de este, dos capacitores de $10uF$ a tierra, se logra obtener una tensión mucho más amena. Además, se decidió duplicar la capacitancia de desacople de cada integrado en el circuito.
 
-Todo esto logró que el circuito se comporte mucho mejor, pero por alguna razón que aún no se ha podido descubrir, como se mencionó previamente, solo se logra mapear el joystick entre 0 y 33 en el mejor de los casos. 
+Todo esto logró que el circuito se comporte mucho mejor, pero por alguna razón, como se mencionó previamente, solo se logra mapear el joystick entre 0 y 35 en el mejor de los casos.
 
-%Tras la implementación de este diseño y su eventual puesta en funcionamiento, luego de compartir varios descansos y tazas de café dialogando sobre las distintas implementaciones que fueron surgiendo a lo largo de nuestros pares, se concluye que se pueden realizar varias modificaciones al diseño presentado aquí para mejorar el funcionamiento de este.
+Finalmente la razón del mapeo erróneo se debe a un fallo en los cálculos al momento de hacer la rampa. Se observó en el osciloscopio que efectivamente solo entraban 35 pulsos en la duración de la rampa en vez de los 99 deseados. Como analizado en la sección (\ref{sec:clkgen}), cuando la señal de clock original egresa del divisor de frecuencia, esta posee un duty-cycle del $50\%$ y una frecuencia cien veces menor a la original. Al ser ingresada al integrador compensado con ganancia, no solo no se consigue una rampa totalmente lineal sino también solo se consigue una rampa ascendente cuya duración es la mitad de la deseada, es decir, el $50\%$ de la señal de entrada en estado alto. Estas dos cosas, una calibración quizás no perfecta, y varias fuentes de error más incluídas en la sincronización de cada etapa explica la pérdida de 9 unidades en la implementación. A modo de retrospectiva, en vez de haber utilizado un divisor de frecuencia por cien, se debería haber utilizado un divisor de frecuencia por cincuenta. Es en este entonces que la rampa poseería la duración adecuada para albergar $99$ pulsos del clock original.
 
-Tras la implementación de este diseño y su eventual puesta en funcionamiento, mediante el dialogo sobre las distintas implementaciones que fueron surgiendo entre los diversos grupos, se concluye que se pueden realizar varias modificaciones al diseño presentado aquí para mejorar el funcionamiento de este.
+Tras la implementación del diseño, su eventual puesta en funcionamiento, debuggeo y varios diálogos sobre las distintas implementaciones que fueron surgiendo entre los diversos grupos, se concluye que se pueden realizar varias modificaciones al diseño presentado aquí para mejorar el funcionamiento de este.
 
-La primera modificación, considerándose la más importante y la que surgió por el diseño propio, es la de utilizar un plano de masa para todo lo digital y otro para todo lo analógico, ambos conectados por una sola vía, ya que esto reduce considerablemente la inmensa cantidad de ruido presente. Se cometió la equivocación de no haber investigado más sobre la interacción entre analógico y digital, por lo que se utilizó un solo plano de masa para ambos.
+La primera modificación, considerándose la más importante y la que surgió por el diseño propio, es la de utilizar un plano de masa a lazo cerrado para todo lo digital y otro a lazo abierto para todo lo analógico, ambos conectados por una sola vía, ya que esto reduce considerablemente la inmensa cantidad de ruido presente. Se cometió la equivocación de no haber investigado más sobre la interacción entre analógico y digital, por lo que se utilizó un solo plano de masa para ambos.
 
 Una buena forma de implementar el conversor es la de utilizar la salida del comparador conectada al enable del contador. Esto hace que cuando la rampa sea mayor a la tensión del joystick, este deje de contar, poniendo así el pin de acquire del display, de manera tal que, durante todo este tiempo se esté refrescando el contador, el cual no cambia.
 
-Otra interesante propuesta es la de no realizar la variación de la tasa de refresco por medio \quotes{del hardware}, como está realizado en este informe, sino mantener siempre una tasa de refresco constante, pero variar cuántas veces por segundo efectivamente se muestra un cambio en el display. Esto facilita mucho el trabajo de diseño de cómo sincronizar cada etapa, ya que estas no deben de trabajar con distintas frecuencias.
+Otra interesante propuesta es la de no realizar la variación de la tasa de refresco por medio ``del hardware'', como está realizado en este informe, sino mantener siempre una tasa de refresco constante, pero variar cuántas veces por segundo efectivamente se muestra un cambio en el display. Esto facilita mucho el trabajo de diseño de cómo sincronizar cada etapa, ya que estas no deben de trabajar con distintas frecuencias.
 
 Continuando con eventuales mejoras al diseño, un grupo utilizó una memoria con latches aparte. De esta forma se minimizan fallas a la hora de mostrar números en el display, debido a eventuales tiempos de propagación, lo cual probó ser de utilidad.
 
