--- a/Ejercicio-8/Ejercicio-8.tex
+++ b/Ejercicio-8/Ejercicio-8.tex
@@ -72,11 +72,12 @@ El mando de control utilizado está compuesto por dos potenciómetros, uno para 
 		(a1) to[short,-o] ++ (-3.5,0)
 		node[label=west:{\color{blue}\textbf{SW}}](SW){}
 		
+		(LEFT_POTY_NODE) to[R, l=$R$] ++ (0, -1.75) 
 		;
 
 		\end{circuitikz}
 		}
-		\caption{Circuito equivalente del mando HW-504 con mismos nombres que el pin-out del periférico.}
+		\caption[Circuito equivalente del mando HW-504 con mismos nombres que el pin-out del periférico. \protect\footnote{La resistencia $R$ es de pull-up .}]{Circuito equivalente del mando HW-504 con mismos nombres que el pin-out del periférico. \protect\footnote{La resistencia $R$ es de pull-up}}
 		\label{circuit:joytick_eq}
 	\end{subfigure}
 \end{figure}
